Update search.css prevent text clipping

--- a/templates/shared/search.css
+++ b/templates/shared/search.css
@@ -6,7 +6,7 @@
 
 #entity-search {
   font-size: 1.2rem;
-  max-width: 165px;
+  max-width: 175px;
   min-width: 50px;
   padding: 0.5rem 30px 0.5rem 30px;
   width: 90%;
